temp_analysis.txt
[eval]:10
    if (c !== arr[0][i-1]) console.log(Index : );
                                       ^^^^^
Expected ',', got ':'

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.18.0
